# ailoy

./: .bumpversion.toml  .gitignore  .gitmodules  404.html  CMakeLists.txt  Cargo.toml  README.md  build.rs  index.html  sitemap.xml
bindings/js-browser/: CMakeLists.txt  package-lock.json  package.json  playwright.config.ts  rollup.config.js  tsconfig.json
bindings/js-browser/csrc/: binding.cpp
bindings/js-browser/src/: index.html
bindings/js-browser/tests/: example.spec.ts
bindings/js-node/: .npmignore  CMakeLists.txt  README.md  build-cmakejs.js  build-prebuild.js  build.js  package-lock.json  package.json  prepack.js  rollup.config.js
bindings/js-node/cmake/: libignore_Linux_ x86_64.txt  libignore_Linux_x86_64.txt
bindings/js-node/csrc/: binding.cpp
bindings/js-node/src/: agent.ts  index.ts  mcp.ts  postinstall.js  reflective_executor.ts  runtime.ts  vector_store.ts
bindings/js-node/tests/: agent-claude.spec.ts  agent-gemini.spec.ts  agent-local.spec.ts  agent-openai.spec.ts  agent.spec.ts  index.spec.ts  runtime.spec.ts
bindings/js-web/: .gitignore  .prettierrc.json  CMakeLists.txt  README.md  index.html  package-lock.json  package.json  rollup.config.js  tsconfig.json  vite.config.ts  vitest.config.ts
bindings/js-web/csrc/: binding.cpp  js_value_converters.hpp  ndarray.hpp  value_converters.hpp
bindings/js-web/src/: agent.ts  ailoy_js_web.d.ts  components.ts  embedding.ts  engine.ts  index.html  index.ts  llm_chat.ts  mcp.ts  runtime.ts  vector_store.ts  webgpu.ts  window.d.ts
bindings/js-web/tests/: agent-claude.test.ts  agent-gemini.test.ts  agent-grok.test.ts  agent-mcp.test.ts  agent-openai.test.ts  agent.test.ts  globalSetup.ts  index.html  vectorstore.test.ts
components/: CMakeLists.txt  Cargo.toml
components/csrc/: message.cpp
components/ctests/: test_message.cpp
components/data/Qwen--Qwen3-0.6B/: _manifest.json
components/include/: chat_template.hpp  message.hpp
components/rsrc/: chat_template.rs  ffi.rs  lang_model.rs  lib.rs  message.rs
components/rsrc/cache/: cache.rs  compat.rs  fs.rs  manifest.rs  mod.rs
components/rsrc/local_model/: chat_template.rs  mod.rs  tokenizer.rs  tvm_model.rs
core/: .gitignore  CMakeLists.txt
core/include/: filesystem.hpp  http.hpp  inproc_socket.hpp  object.hpp  value.hpp
core/src/: filesystem_native.cpp  filesystem_opfs.cpp  http.cpp  inproc_socket.cpp  logging.cpp  thread.cpp
core/tests/: test_filesystem.cpp  test_filesystem.html  test_http.cpp  test_http.html
docs/: README.md  (+5 more)
shim/: CMakeLists.txt  CMakePresets.json  README.md
shim/include/: embedding_model.hpp  faiss_bridge.hpp  language_model.hpp  tvm_runtime.hpp
shim/src/: dlpack_bridge.cpp  embedding_model.cpp  faiss_bridge.cpp  language_model.cpp  tvm_runtime.cpp
v2/: Cargo.toml  build.rs
v2/bindings/js-browser/: index.html  package.json  playwright.config.js
v2/bindings/nodejs/: .gitignore  README.md  package-lock.json  package.json  tsconfig.json
v2/bindings/python/: README.md  mkdocs.yml  pyproject.toml
v2/bindings/web/: .gitignore  .prettierignore  package-lock.json  package.json  vite.config.ts
v2/cpp/: CMakeLists.txt
v2/cpp/include/: cache.hpp  language_model.hpp  rust_bridge.hpp  tvm_model.hpp  tvm_runtime.hpp
v2/cpp/src/: cache.cpp  language_model.cpp  language_model.hpp  rust_bridge.cpp  tvm_model.cpp  tvm_runtime.cpp  tvm_runtime.hpp
v2/cpp/tests/: test_tvm.cpp
v2/data/Qwen--Qwen3-0.6B/: chat_template.j2
v2/js-browser/: .gitignore  package-lock.json
v2/macros/: Cargo.toml
v2/macros/src/: lib.rs  python.rs
v2/rust/: Cargo.toml  build.rs
v2/rust/src/: agent.rs  lib.rs  message.rs
v2/shim/: CMakeLists.txt
v2/shim/include/: dlpack_bridge.hpp  embedding_model.hpp  faiss_bridge.hpp  language_model.hpp  tvm_runtime.hpp
v2/shim/src/: cache.cpp  embedding_model.cpp  faiss_bridge.cpp  language_model.cpp  tvm_runtime.cpp
v2/shim/tests/: test_tvm.cpp
v2/shim_js/: .gitignore  package-lock.json  package.json  rollup.config.js  tsconfig.json  vite.config.ts
v2/shim_js/csrc/: faiss_bridge.cpp
v2/shim_js/scripts/: build_faiss_bridge.sh
v2/shim_js/src/: embedding_model.ts  faiss_vector_store.ts  index.ts  language_model.ts  tvm_runtime.ts
v2/shim_js/tests/: faiss.test.ts
v2/src/: agent.rs  lib.rs  message.rs
v2/src/agent/: agent.rs  mod.rs  system_message_renderer.rs
v2/src/cache/: cache.rs  claim.rs  contents.rs  element.rs  entry.rs  filesystem.rs  from_cache.rs  mod.rs
v2/src/cli/: ailoy_model.rs  mod.rs
v2/src/ffi/: cxx_bridge.rs  dlpack_wrap.rs  faiss_wrap.rs  js_bridge.rs  mod.rs  py.rs  util.rs
v2/src/knowledge/: base.rs  custom_knowledge.rs  mod.rs  vector_store_knowledge.rs
v2/src/knowledge_base/: mod.rs  vector_store.rs
v2/src/language_model/: mod.rs
v2/src/mcp/: mod.rs
v2/src/message/: message.rs  tool_desc.rs
v2/src/model/: custom.rs  embedding_model.rs  language_model.rs  mod.rs  polyfill.rs
v2/src/store/: mod.rs
v2/src/tool/: builtin.rs  function.rs  mcp.rs  mod.rs
v2/src/utils/: async_trait.rs  float.rs  log.rs  maybe_sync.rs  mod.rs  normalize.rs  test.rs
v2/src/value/: block.rs  bytes.rs  config.rs  delta.rs  document.rs  embedding.rs  format.rs  formats.rs  marshal.rs  message.rs  mod.rs  part.rs  primitive.rs  tool.rs  tool_call.rs  tool_desc.rs  value.rs
v2/web/: index.html  package.json  playwright.config.js
vm/: CMakeLists.txt
vm/include/: module.hpp  vm.hpp
vm/src/: calculator.hpp  chat_manager.cpp  chat_manager.hpp  chromadb_vector_store.cpp  chromadb_vector_store.hpp  faiss_vector_store.hpp  gemini.cpp  gemini.hpp  http_request.cpp  http_request.hpp  language.cpp  language_module.cpp  model_cache.cpp  model_cache.hpp  module.cpp  openai.cpp  openai.hpp  openai_schema.cpp  openai_schema.hpp  split_text.cpp  tokenizer.cpp  tokenizer.hpp  vm.cpp
vm/tests/: test_api_models.cpp  test_faiss_vector_store.html  test_gemini.cpp  test_langmodel_v2.cpp  test_model_cache.cpp  test_model_cache.html  test_model_cache_web.cpp  test_model_cache_web.html  test_openai.cpp  test_split_text.cpp  test_tokenizers.cpp  test_tvm_language_model.cpp
(+1424 files in other folders)
