[package]
name = "ailoy_components_rs"
version = "0.1.0"
edition = "2024"

[dependencies]
async-stream = "0.3"
bytes = "1.10.1"
futures = "0.3.31"
minijinja = { version = "2.11.0", features = ["loader", "custom_syntax", "json"] }
minijinja-contrib = { version = "2.11.0", features = ["pycompat"] }
reqwest = { version = "0.12", features = ["stream"] }
sha1 = "0.10"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tokenizers = { version = "0.21.4", default-features = false, features = [] }
url = "2.5.4"

[target.'cfg(target_arch = "wasm32")'.dependencies]
getrandom = { version = "0.3", features = ["wasm_js"] }
tokenizers = { version = "0.21.4", default-features = false, features = ["fancy-regex"] }
wasm-bindgen = "0.2"
wasm-bindgen-futures = "0.4"

[target.'cfg(not(target_arch = "wasm32"))'.dependencies]
indicatif = "0.17"
tokenizers = { version = "0.21.4", default-features = false, features = ["onig"] }
tokio = { version = "1.0", default-features = false, features = ["macros", "rt-multi-thread"] }

[lib]
crate-type = ["staticlib"]
path = "rsrc/lib.rs"
