[package]
name = "ailoy"
version = "0.1.0"
edition = "2024"

[features]
node = ["dep:napi", "dep:napi-derive"]
python = ["dep:pyo3", "dep:pyo3-async-runtimes", "dep:pyo3-stub-gen", "dep:pyo3-stub-gen-derive"]
default = []


[dependencies]
anyhow = "1"
async-channel = "2.5"
async-stream = "0.3"
futures = "0.3.31"
indexmap = { version = "2", features = ["serde"] }
minijinja = { version = "2.11.0", features = ["loader", "custom_syntax", "json"] }
minijinja-contrib = { version = "2.11.0", features = ["pycompat"] }
napi = { version = "3", features = ["tokio_rt"], optional = true }
napi-derive = { version = "3", optional = true }
ordered-float = { version = "5.0.0", features = ["serde"] }
pyo3 = { version = "0.25", optional = true }
pyo3-async-runtimes = { version = "0.25", features = ["attributes", "tokio-runtime"], optional = true }
pyo3-stub-gen = { version = "0.12.2", optional = true }
pyo3-stub-gen-derive = { version = "0.12.2", optional = true }
reqwest = { version = "0.12", features = ["stream"] }
rmcp = { version = "0.5.0", features = ["client", "reqwest", "transport-streamable-http-client", "transport-sse-client"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = { version = "1.0", features = ["preserve_order"] }
sha1 = "0.10"
strum = { version = "0.27", features = ["derive"] }
url = "2.5.4"

[target.'cfg(target_arch = "wasm32")'.dependencies]
getrandom = { version = "0.3", features = ["wasm_js"] }
js-sys = "0.3"
tokenizers = { version = "0.21.4", default-features = false, features = ["fancy-regex"] }
tokio = { version = "1.0", default-features = false, features = ["macros", "rt", "sync"] }
wasm-bindgen = "0.2"
wasm-bindgen-futures = "0.4"
web-sys = { version = "0.3", features = [
    "FileSystemCreateWritableOptions",
    "FileSystemDirectoryHandle",
    "FileSystemFileHandle",
    "FileSystemGetDirectoryOptions",
    "FileSystemGetFileOptions",
    "FileSystemRemoveOptions",
    "FileSystemWritableFileStream",
    "Navigator",
    "Storage",
    "StorageManager"
] }

[build-dependencies]
napi-build = "2"

[target.'cfg(not(target_arch = "wasm32"))'.build-dependencies]
cmake = "0.1"
cxx-build = "1.0"

[target.'cfg(not(target_arch = "wasm32"))'.dependencies]
cxx = "1.0"
onig = "6"
rmcp = { version = "0.5.0", features = ["transport-child-process"] }
tokenizers = { version = "0.21.4", default-features = false, features = ["onig"] }
tokio = { version = "1.0", default-features = false, features = ["macros", "rt-multi-thread", "sync"] }

[lib]
crate-type = ["cdylib", "rlib"]
path = "src/lib.rs"

[[bin]]
name = "py_stub_gen"
doc = false
required-features = ["python"]
